# FunnyStreamTools

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: baseplugin.py  baseprovider.py  coremanagers.py  eventbus.py  main.py  sdk.py
plugins/bluescreen/: index 95.html  index.html  main.py
plugins/canvas/: index.html  main.py  sender.html
plugins/commandchat/: index 95.html  index arch.html  index cs16.html  index kali.html  index powershell.html  index.html  main.py
plugins/dashboard/: index.html  main.py
plugins/discordvoice/: index.html  main.py
plugins/emojicombo/: index.html  main.py
providers/chatemoji/: main.py
providers/discord/: main-dont-work.py
providers/memecanvas/: main.py
providers/twitch/: main.py
